trunk/Archive2/a6/6537339a7b078c/output
main.cpp: In function 'const int& foo(const int&)':
main.cpp:6:35: error: returning reference to temporary [-Werror=return-local-addr]
     return rand()%2?  passed_in : globalstuff;
                                   ^
main.cpp: In function 'int main()':
main.cpp:10:16: error: unused variable 'uhoh' [-Werror=unused-variable]
     int const& uhoh = foo(5); // to extend or not to extend - that is the HALTING problem
                ^
cc1plus: all warnings being treated as errors
